[gd_scene load_steps=12 format=2]

[ext_resource path="res://Jogo.gd" type="Script" id=1]
[ext_resource path="res://Nave.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.580392, 0.737255, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.137255, 0.215686, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 20 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0.211765, 0, 1, 1, 0.67451, 0, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 0, 8, 1 )
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.1
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -10.0
linear_accel_random = 0.25
damping = 100.0
scale = 1.3
scale_random = 1.0
color_ramp = SubResource( 5 )

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0, 0.690196, 0.678431, 1, 0, 0.690196, 0.678431, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 20, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.9
angular_velocity = 50.0
angular_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 1.0
angle = 26.2
angle_random = 1.0
scale = 5.0
scale_random = 0.9
color_ramp = SubResource( 8 )

[node name="Jogo" type="Node2D"]
script = ExtResource( 1 )

[node name="Interface" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="Interface"]
margin_left = 38.0
margin_top = 180.0
margin_right = 189.0
margin_bottom = 194.0
rect_rotation = -89.9999
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Inicio" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 70, 543 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Inicio"]
polygon = PoolVector2Array( -20, 10, 20, 10, 10, -10, -10, -10 )

[node name="Polygon2D" type="Polygon2D" parent="Inicio"]
color = Color( 0.996078, 0.847059, 0.513726, 1 )
polygon = PoolVector2Array( -20, 10, 20, 10, 10, -10, -10, -10 )

[node name="Chegada" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 940, 540 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Chegada"]
polygon = PoolVector2Array( -20, 10, 20, 10, 10, -10, -10, -10 )

[node name="Polygon2D" type="Polygon2D" parent="Chegada"]
color = Color( 0.262745, 0.717647, 0.431373, 1 )
polygon = PoolVector2Array( -20, 10, 20, 10, 10, -10, -10, -10 )

[node name="Obstaculo" type="StaticBody2D" parent="."]
editor/display_folded = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Obstaculo"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 20, 590, 1010, 590, 1010, 10, 20, 10 )

[node name="Polygon2D" type="Polygon2D" parent="Obstaculo"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
invert_enable = true
invert_border = 20.0
polygon = PoolVector2Array( 20, 590, 1010, 590, 1010, 10, 20, 10 )

[node name="Espinho" type="CollisionPolygon2D" parent="Obstaculo"]
editor/display_folded = true
position = Vector2( -313, 226 )
build_mode = 1
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Polygon2D2" type="Polygon2D" parent="Obstaculo/Espinho"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Espinho2" type="CollisionPolygon2D" parent="Obstaculo"]
editor/display_folded = true
position = Vector2( 1050, 370 )
rotation = 3.14159
build_mode = 1
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Polygon2D2" type="Polygon2D" parent="Obstaculo/Espinho2"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Espinho3" type="CollisionPolygon2D" parent="Obstaculo"]
editor/display_folded = true
position = Vector2( 130, 226 )
build_mode = 1
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Polygon2D2" type="Polygon2D" parent="Obstaculo/Espinho3"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
polygon = PoolVector2Array( 453, 364, 683, 364, 573, 24 )

[node name="Plataforma" type="CollisionShape2D" parent="Obstaculo"]
editor/display_folded = true
position = Vector2( 70, 570 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Obstaculo/Plataforma"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
polygon = PoolVector2Array( -40, -20, -40, 20, 40, 20, 40, -20 )

[node name="Plataforma2" type="CollisionShape2D" parent="Obstaculo"]
editor/display_folded = true
position = Vector2( 940, 570 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Obstaculo/Plataforma2"]
color = Color( 0.917647, 0.282353, 0.2, 1 )
polygon = PoolVector2Array( -40, -20, -40, 20, 40, 20, 40, -20 )

[node name="Nave" type="RigidBody2D" parent="."]
position = Vector2( 70, 523 )
contacts_reported = 5
contact_monitor = true
linear_damp = 0.8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Nave"]
polygon = PoolVector2Array( -10, 10, 10, 10, 0, -20 )

[node name="Polygon2D" type="Polygon2D" parent="Nave"]
color = Color( 0, 0.690196, 0.678431, 1 )
polygon = PoolVector2Array( -10, 10, 10, 10, 0, -20 )

[node name="Propulsao" type="Particles2D" parent="Nave"]
position = Vector2( 1, 10 )
rotation = 1.57079
emitting = false
amount = 300
local_coords = false
process_material = SubResource( 6 )

[node name="Explosao" type="Particles2D" parent="Nave"]
emitting = false
amount = 50
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 9 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Nave" to="." method="_on_Nave_body_entered"]
[connection signal="body_exited" from="Nave" to="." method="_on_Nave_body_exited"]
